clean up config file

--- a/mpv.conf
+++ b/mpv.conf
@@ -1,4 +1,5 @@
 # see https://github.com/mpv-player/mpv/blob/master/DOCS/man/options.rst
+
 osd-level=0
 osd-bar=no
 input-default-bindings=no
@@ -6,14 +7,21 @@ input-vo-keyboard=no
 input-cursor=no
 input-touch-emulate-mouse=no
 input-cursor-passthrough=yes
-cursor-autohide=no
+
+# the remainder of window configuration needs to be handled
+# by your desktop environment, which for now is only Plasma
+# and done by manually importing kwinrules from
+# the system settings app
 title=wallpaper-mpv
-window-maximized=yes
 no-border
+window-maximized=yes
+cursor-autohide=no
+stop-screensaver=no
+
 image-display-duration=inf
 loop-file=inf
-mute=yes
-stop-screensaver=no
+mute=yes # opinionated
+
 [hdr]
 vo=gpu-next
 gpu-api=vulkan
@@ -30,4 +38,3 @@ inverse-tone-mapping=yes
 dither-depth=10
 icc-profile-auto=no
 tone-mapping=st2094-40
-
