change mpv flags for faster startup and scaling

--- a/mpv.conf
+++ b/mpv.conf
@@ -1,20 +1,19 @@
-# see https://github.com/mpv-player/mpv/blob/master/DOCS/man/options.rst
+# https://github.com/mpv-player/mpv/blob/master/DOCS/man/options.rst
 
 osd-level=0
 osd-bar=no
+osd-on-seek=no
 input-default-bindings=no
 input-vo-keyboard=no
 input-cursor=no
 input-touch-emulate-mouse=no
 input-cursor-passthrough=yes
-
 # the remainder of window configuration needs to be handled
 # by your desktop environment, which for now is only Plasma
 # and done by manually importing kwinrules from
 # the system settings app
-title=wallpaper-mpv
 no-border
-window-maximized=yes
+fullscreen
 cursor-autohide=no
 stop-screensaver=no
 
@@ -22,19 +21,21 @@ image-display-duration=inf
 loop-file=inf
 mute=yes # opinionated
 
+dither-depth=16
+scale=ewa_lanczos4sharpest
+cscale=ewa_lanczos4sharpest
+dscale=ewa_lanczos4sharpest
 [hdr]
 vo=gpu-next
 gpu-api=vulkan
 gpu-context=waylandvk
 hwdec=auto
-interpolation=no # performance
-target-colorspace-hint=yes
+interpolation=no # increases performance
+target-colorspace-hint=yes # remove if it looks washed out
 target-prim=bt.2020
 target-trc=pq
 target-contrast=inf
-# SDR->HDR
 hdr-compute-peak=yes
-inverse-tone-mapping=yes
-dither-depth=10
-icc-profile-auto=no
+# SDR->HDR
 tone-mapping=st2094-40
+inverse-tone-mapping=yes
