rearrange properties more sensibly

--- a/mpv.conf
+++ b/mpv.conf
@@ -3,11 +3,11 @@
 osd-level=0
 osd-bar=no
 osd-on-seek=no
-input-default-bindings=no
 input-vo-keyboard=no
 input-cursor=no
+input-terminal=no
 input-touch-emulate-mouse=no
-input-cursor-passthrough=yes
+
 # the remainder of window configuration needs to be handled
 # by your desktop environment, which for now is only Plasma
 # and done by manually importing kwinrules from
@@ -16,12 +16,14 @@ no-border
 fullscreen
 cursor-autohide=no
 stop-screensaver=no
+input-cursor-passthrough=yes
 
-image-display-duration=inf
-loop-file=inf
-mute=yes # opinionated
+image-display-duration=600
 
-dither-depth=16
+interpolation=yes
+video-sync=display-desync
+audio=no
+
 scale=ewa_lanczos4sharpest
 cscale=ewa_lanczos4sharpest
 dscale=ewa_lanczos4sharpest
@@ -30,12 +32,13 @@ vo=gpu-next
 gpu-api=vulkan
 gpu-context=waylandvk
 hwdec=auto
-interpolation=no # increases performance
+
 target-colorspace-hint=yes # remove if it looks washed out
 target-prim=bt.2020
 target-trc=pq
 target-contrast=inf
 hdr-compute-peak=yes
+dither-depth=no
 # SDR->HDR
 tone-mapping=st2094-40
 inverse-tone-mapping=yes
