minimize playback artifacts and performance issues

--- a/mpv.conf
+++ b/mpv.conf
@@ -7,10 +7,9 @@ input-vo-keyboard=no
 input-cursor=no
 input-touch-emulate-mouse=no
 
-# the remainder of window configuration needs to be handled
-# by your desktop environment, which for now is only Plasma
-# and done by manually importing kwinrules from
-# the system settings app
+# "Fullscreen" is required to be set to "Force"
+# in Plasma Window Rules so the window does not
+# have to resize itself upwards after creation
 no-border
 fullscreen
 cursor-autohide=no
@@ -19,24 +18,27 @@ input-cursor-passthrough=yes
 
 image-display-duration=600
 
-interpolation=yes
-video-sync=display-desync
+#TODO: config options
 audio=no
 
-scale=ewa_lanczos4sharpest
-cscale=ewa_lanczos4sharpest
-dscale=ewa_lanczos4sharpest
+# These options can affect performance.
+# on lower end devices, options like video-sync=display-resample
+# can prevent frame drops but may make videos literally play slower
+# as it tries to render every frame no matter how long it takes
+cscale=ewa_lanczossharp
 [hdr]
 vo=gpu-next
 gpu-api=vulkan
 gpu-context=waylandvk
 hwdec=auto
+hwdec-software-fallback=no
 
 target-colorspace-hint=yes # remove if it looks washed out
 target-prim=bt.2020
 target-trc=pq
 target-contrast=inf
 hdr-compute-peak=yes
+deband=no
 dither-depth=no
 # SDR->HDR
 tone-mapping=st2094-40
