add modular command line option parser

--- a/mpv.conf
+++ b/mpv.conf
@@ -20,11 +20,13 @@ image-display-duration=600
 
 #TODO: config options
 audio=no
+vulkan-swap-mode=mailbox
+swapchain-depth=8
+vulkan-queue-count=8
 
-# These options can affect performance.
-# on lower end devices, options like video-sync=display-resample
-# can prevent frame drops but may make videos literally play slower
-# as it tries to render every frame no matter how long it takes
+target-contrast=inf
+target-peak=1000
+
 cscale=ewa_lanczossharp
 [hdr]
 vo=gpu-next
