migrate to IPC sockets instead of disposable MPV instances

--- a/mpv.conf
+++ b/mpv.conf
@@ -1,11 +1,10 @@
 # https://github.com/mpv-player/mpv/blob/master/DOCS/man/options.rst
 
 osd-level=0
-osd-bar=no
-osd-on-seek=no
 input-vo-keyboard=no
 input-cursor=no
 input-touch-emulate-mouse=no
+idle=yes
 
 # "Fullscreen" is required to be set to "Force"
 # in Plasma Window Rules so the window does not
@@ -16,24 +15,17 @@ cursor-autohide=no
 stop-screensaver=no
 input-cursor-passthrough=yes
 
-image-display-duration=600
-
-#TODO: config options
+image-display-duration=900
 audio=no
-vulkan-swap-mode=mailbox
-swapchain-depth=8
-vulkan-queue-count=8
 
-target-contrast=inf
-target-peak=1000
-
+# scale=ewa_lanczossharp
 cscale=ewa_lanczossharp
+# dscale=ewa_lanczossharp
 [hdr]
 vo=gpu-next
 gpu-api=vulkan
 gpu-context=waylandvk
 hwdec=auto
-hwdec-software-fallback=no
 
 target-colorspace-hint=yes # remove if it looks washed out
 target-prim=bt.2020
