Add help text and some flag functionality, fix mpv option performance issues

--- a/mpv.conf
+++ b/mpv.conf
@@ -4,29 +4,22 @@ osd-level=0
 input-vo-keyboard=no
 input-cursor=no
 input-touch-emulate-mouse=no
-idle=yes
+input-cursor-passthrough=yes
 
-# "Fullscreen" is required to be set to "Force"
-# in Plasma Window Rules so the window does not
-# have to resize itself upwards after creation
 no-border
 fullscreen
 cursor-autohide=no
 stop-screensaver=no
-input-cursor-passthrough=yes
+idle=yes
 
-image-display-duration=900
-audio=no
+image-display-duration=300
+# audio=no
 
-# scale=ewa_lanczossharp
 cscale=ewa_lanczossharp
-# dscale=ewa_lanczossharp
-[hdr]
 vo=gpu-next
 gpu-api=vulkan
 gpu-context=waylandvk
 hwdec=auto
-
 target-colorspace-hint=yes # remove if it looks washed out
 target-prim=bt.2020
 target-trc=pq
@@ -34,6 +27,3 @@ target-contrast=inf
 hdr-compute-peak=yes
 deband=no
 dither-depth=no
-# SDR->HDR
-tone-mapping=st2094-40
-inverse-tone-mapping=yes
