Reorganize config for more devices and remove ITM for reducing peak brightness in SDR content

--- a/mpv.conf
+++ b/mpv.conf
@@ -1,29 +1,54 @@
 # https://github.com/mpv-player/mpv/blob/master/DOCS/man/options.rst
-
+no-border
+fullscreen
+idle=yes
+#=====
+#|hide mpv ui and allow access to desktop
+#|functions like krunner and right click
+#|context menu; comment out for testing!
+stop-screensaver=no
 osd-level=0
 input-vo-keyboard=no
 input-cursor=no
+input-media-keys=no
 input-touch-emulate-mouse=no
 input-cursor-passthrough=yes
+#|terminal input is inconsistent and can
+#|temporarily interrupt the MPV socket
+input-terminal=no
+#=====
 
-no-border
-fullscreen
-cursor-autohide=no
-stop-screensaver=no
-idle=yes
-
-image-display-duration=300
+#=====
+#|These options can impact performance.
+#|Some videos may perform better with different
+#|configurations than others!
+# deband=no
+# dither-depth=no
 # audio=no
+# mute=yes
+# video-sync=display-desync
+# untimed=yes
+# cscale=ewa_lanczossharp
+# video-sync=display-resample
+# interpolation=yes
+# interpolation=no
+# tscale=oversample
+#=====
 
-cscale=ewa_lanczossharp
+#|hint dictates HDR passthrough, which is important!
+#|might break on some outdated drivers, if set to no
+#|HDR content may just be tonemapped to SDR
 vo=gpu-next
 gpu-api=vulkan
 gpu-context=waylandvk
 hwdec=auto
-target-colorspace-hint=yes # remove if it looks washed out
-target-prim=bt.2020
-target-trc=pq
-target-contrast=inf
+target-colorspace-hint=yes
 hdr-compute-peak=yes
-deband=no
-dither-depth=no
+target-contrast=inf
+#|there are many other HDR options you can try but
+#|they tend to make any SDR content lose brightness
+#|in trying to convert them to HDR
+#|SDR -> HDR is possible but loses some brightness
+# target-prim=bt.2020
+# target-trc=pq
+# target-peak=<your plasma 6.4 calibration>
