add --osd flag to toggle ability to focus, use keyboard shortcuts/osd

--- a/mpv.conf
+++ b/mpv.conf
@@ -2,21 +2,10 @@
 no-border
 fullscreen
 idle=yes
-#=====
-#|hide mpv ui and allow access to desktop
-#|functions like krunner and right click
-#|context menu; comment out for testing!
 stop-screensaver=no
-osd-level=0
-input-vo-keyboard=no
-input-cursor=no
-input-media-keys=no
-input-touch-emulate-mouse=no
 input-cursor-passthrough=yes
-#|terminal input is inconsistent and can
-#|temporarily interrupt the MPV socket
-input-terminal=no
-#=====
+terminal=yes
+# input-terminal=no
 
 #=====
 #|These options can impact performance.
@@ -25,7 +14,7 @@ input-terminal=no
 # deband=no
 # dither-depth=no
 # audio=no
-# mute=yes
+mute=yes
 # video-sync=display-desync
 # untimed=yes
 # cscale=ewa_lanczossharp
