Refactor command line arguments, demarcate future options, simplify window management

--- a/mpv.conf
+++ b/mpv.conf
@@ -2,11 +2,12 @@
 no-border
 fullscreen
 idle=yes
+force-window=yes
 stop-screensaver=no
 input-cursor-passthrough=yes
-terminal=yes
-# input-terminal=no
-
+drag-and-drop=no
+osc=no
+audio=no
 #=====
 #|These options can impact performance.
 #|Some videos may perform better with different
@@ -14,7 +15,7 @@ terminal=yes
 # deband=no
 # dither-depth=no
 # audio=no
-mute=yes
+# mute=yes
 # video-sync=display-desync
 # untimed=yes
 # cscale=ewa_lanczossharp
