--- a/mpv.conf
+++ b/mpv.conf
@@ -8,6 +8,7 @@ input-cursor-passthrough=yes
 drag-and-drop=no
 osc=no
 audio=no
+image-display-duration=300
 #=====
 #|These options can impact performance.
 #|Some videos may perform better with different
