Finished inverse duration probability sorting and ITM support

--- a/mpv.conf
+++ b/mpv.conf
@@ -1,4 +1,11 @@
 # https://github.com/mpv-player/mpv/blob/master/DOCS/man/options.rst
+#|YOU SHOULD SET target-peak MANUALLY!
+#|This is especially important for videos mastered
+#|to high nits above 2000, as well as inverse tone mapped SDR
+#|where it defaults to 10000. Go into Plasma 6.4
+#|HDR calibration and set it to what you find is the max!
+#|Use stats for nerds or the i shortcut to test yourself.
+#|socat /tmp/HDRsocket - <<< '{command=["cycle-values","option","whatever","auto"]}'
 no-border
 fullscreen
 idle=yes
@@ -36,10 +43,18 @@ hwdec=auto
 target-colorspace-hint=yes
 hdr-compute-peak=yes
 target-contrast=inf
-#|there are many other HDR options you can try but
-#|they tend to make any SDR content lose brightness
-#|in trying to convert them to HDR
-#|SDR -> HDR is possible but loses some brightness
-# target-prim=bt.2020
-# target-trc=pq
-# target-peak=<your plasma 6.4 calibration>
+target-peak=480 # otherwise tends to be set to video's mastering brightness or 10000
+tone-mapping=st2094-40 # maps down bright parts out of your monitor range
+[SDR-inverse-tone-mapping]
+profile-cond=p["video-params/sig-peak"] <= 1
+profile-restore=copy
+scale=ewa_lanczossharp
+target-prim=bt.2020
+target-trc=pq
+#|For inverse tone mapping, only a few options apply:
+#| bt.2446a is standardized and the darkest
+#| spline is configurable and brighter
+#| linear is simple and the brightest
+#|The rest of the options fail or fall back to spline
+inverse-tone-mapping=yes
+tone-mapping=bt.2446a
