add itm tests and refactor randomization

--- a/mpv.conf
+++ b/mpv.conf
@@ -32,6 +32,8 @@ image-display-duration=300
 # interpolation=no
 # tscale=oversample
 #=====
+background=color
+background-color=0.0/0.0/0.0/0.5
 
 #|hint dictates HDR passthrough, which is important!
 #|might break on some outdated drivers, if set to no
@@ -58,3 +60,4 @@ target-trc=pq
 #|The rest of the options fail or fall back to spline
 inverse-tone-mapping=yes
 tone-mapping=bt.2446a
+#socat - /tmp/HDRsocket <<< '{command=["set_property","tone-mapping","spline"]}'
