Automatically and safely add KDE window rules to kwinrulesrc

--- a/mpv.conf
+++ b/mpv.conf
@@ -1,11 +1,4 @@
 # https://mpv.io/manual/master/
-#|YOU SHOULD SET target-peak MANUALLY!
-#|This is especially important for videos mastered
-#|to high nits above 2000, as well as inverse tone mapped SDR
-#|where it defaults to 10000. Go into Plasma 6.4
-#|HDR calibration and set it to what you find is the max!
-#|Use stats for nerds or the i shortcut to test yourself.
-#|socat /tmp/HDRsocket - <<< '{command=["cycle-values","option","whatever","auto"]}'
 no-border
 fullscreen
 idle=yes
@@ -45,4 +38,4 @@ hwdec=auto
 target-colorspace-hint=yes
 hdr-compute-peak=yes
 target-contrast=inf
-target-peak=480 # otherwise tends to be set to video's mastering brightness or 10000
+target-peak=380 # set me to plasma 6.4 HDR Calibration Brightness
