--- a/mpv.conf
+++ b/mpv.conf
@@ -39,3 +39,28 @@ target-colorspace-hint=yes
 hdr-compute-peak=yes
 target-contrast=inf
 target-peak=380 # set me to plasma 6.4 HDR Calibration Brightness
+#|For inverse tone mapping, only a few options apply:
+#| bt.2446a is standardized and the darkest
+#| spline is configurable and brighter
+#| linear is simple and the brightest
+#|The rest of the options fail or fall back to spline
+#socat /tmp/HDRsocket - <<< '{command=["cycle-values","tone-mapping","bt.2446a","spline"]}'
+[inverse-tone-mapping-video]
+profile-cond=p["video-params/sig-peak"] <= 1 and p["duration"] > 1 and not p["user-data/novideo"]
+profile-restore=copy
+scale=ewa_lanczos4sharpest
+dither-depth=10
+temporal-dither
+target-prim=bt.2020
+target-trc=pq
+inverse-tone-mapping=yes
+tone-mapping=bt.2446a
+[inverse-tone-mapping-image]
+profile-cond=p["video-params/sig-peak"] <= 1 and p["duration"] < 1 and not p["user-data/noimage"]
+profile-restore=copy
+target-prim=bt.2020
+target-trc=pq
+dither-depth=10
+scale=ewa_lanczos4sharpest
+inverse-tone-mapping=yes
+tone-mapping=bt.2446a
