reformat some parts, maybe split up script into modules in future

--- a/mpv.conf
+++ b/mpv.conf
@@ -13,8 +13,8 @@ image-display-duration=300
 #|These options can impact performance.
 #|Some videos may perform better with different
 #|configurations than others!
-# deband=no
-# dither-depth=no
+deband=no
+dither-depth=10
 # audio=no
 # mute=yes
 # video-sync=display-desync
@@ -25,8 +25,6 @@ image-display-duration=300
 # interpolation=no
 # tscale=oversample
 #=====
-background=color
-background-color=0.0/0.0/0.0/0.5
 
 #|hint dictates HDR passthrough, which is important!
 #|might break on some outdated drivers, if set to no
@@ -38,7 +36,8 @@ hwdec=auto
 target-colorspace-hint=yes
 hdr-compute-peak=yes
 target-contrast=inf
-target-peak=380 # set me to plasma 6.4 HDR Calibration Brightness
+target-peak=480 # set me to plasma 6.4 HDR Calibration Brightness
+tone-mapping=st2094-40 # prevents brightness flickering from compute peak
 #|For inverse tone mapping, only a few options apply:
 #| bt.2446a is standardized and the darkest
 #| spline is configurable and brighter
@@ -46,6 +45,7 @@ target-peak=380 # set me to plasma 6.4 HDR Calibration Brightness
 #|The rest of the options fail or fall back to spline
 #socat /tmp/HDRsocket - <<< '{command=["cycle-values","tone-mapping","bt.2446a","spline"]}'
 [inverse-tone-mapping-video]
+# can cause lag
 profile-cond=p["video-params/sig-peak"] <= 1 and p["duration"] > 1 and not p["user-data/novideo"]
 profile-restore=copy
 scale=ewa_lanczos4sharpest
