Simply mpv.conf, let target-peak try to be manually set

--- a/mpv.conf
+++ b/mpv.conf
@@ -8,26 +8,13 @@ input-cursor-passthrough=yes
 drag-and-drop=no
 osc=no
 audio=no
-#=====
-#|These options can impact performance.
-#|Some videos may perform better with different
-#|configurations than others!
-deband=no
-dither-depth=10
-# audio=no
-# mute=yes
-# video-sync=display-desync
-# untimed=yes
-# cscale=ewa_lanczossharp
-# video-sync=display-resample
-# interpolation=yes
-# interpolation=no
-# tscale=oversample
-#=====
+image-display-duration=300
 
-#|hint dictates HDR passthrough, which is important!
-#|might break on some outdated drivers, if set to no
-#|HDR content may just be tonemapped to SDR
+#|target-peak may or may not be set correctly automatically
+#|you can see this under HDR10: Display: 0/x cd/m^2 in Stats for Nerds
+#|if you set target-peak manually you may want
+# tone-mapping=st-2094-40
+#| on real hdr content to prevent brightness flickering
 vo=gpu-next
 gpu-api=vulkan
 gpu-context=waylandvk
@@ -35,31 +22,22 @@ hwdec=auto
 target-colorspace-hint=yes
 hdr-compute-peak=yes
 target-contrast=inf
-target-peak=480 # set me to plasma 6.4 HDR Calibration Brightness
-tone-mapping=st2094-40 # prevents brightness flickering from compute peak
-#|For inverse tone mapping, only a few options apply:
-#| bt.2446a is standardized and the darkest
-#| spline is configurable and brighter
-#| linear is simple and the brightest
-#|The rest of the options fail or fall back to spline
-#socat /tmp/HDRsocket - <<< '{command=["cycle-values","tone-mapping","bt.2446a","spline"]}'
+
 [inverse-tone-mapping-video]
 # can cause lag
 profile-cond=p["video-params/sig-peak"] <= 1 and p["duration"] > 1 and not p["user-data/novideo"]
 profile-restore=copy
 scale=ewa_lanczos4sharpest
-dither-depth=10
-temporal-dither
 target-prim=bt.2020
 target-trc=pq
 inverse-tone-mapping=yes
-tone-mapping=bt.2446a
+tone-mapping=spline
 [inverse-tone-mapping-image]
 profile-cond=p["video-params/sig-peak"] <= 1 and p["duration"] < 1 and not p["user-data/noimage"]
 profile-restore=copy
 target-prim=bt.2020
 target-trc=pq
-dither-depth=10
 scale=ewa_lanczos4sharpest
 inverse-tone-mapping=yes
-tone-mapping=bt.2446a
+tone-mapping=spline
+#socat /tmp/wallpapermpvsocket - <<< '{command=["cycle-values","tone-mapping","bt.2446a","spline"]}'
