--- a/mpv.conf
+++ b/mpv.conf
@@ -15,6 +15,17 @@ image-display-duration=300
 #|if you set target-peak manually you may want
 # tone-mapping=st-2094-40
 #| on real hdr content to prevent brightness flickering
+
+#| for inverse tone mapping, bt.2446a
+
+#| is better for a high target-peak!
+#| bt.2446a is generally less bright and more natural,
+#| otherwise use spline for a customizable, strong effect
+#| on lower target peaks below say 600
+#socat /tmp/wpmpvsocket - <<< '{command=["cycle-values","tone-mapping","bt.2446a","spline"]}'
+#socat /tmp/wpmpvsocket - <<< '{command=["set_property","target-peak","auto"]}'
+#socat /tmp/wpmpvsocket - <<< '{command=["script-binding","stats/display-stats-toggle"]}'
+
 vo=gpu-next
 gpu-api=vulkan
 gpu-context=waylandvk
@@ -22,12 +33,19 @@ hwdec=auto
 target-colorspace-hint=yes
 hdr-compute-peak=yes
 target-contrast=inf
-
+target-peak=480
+[sdr-no-target-peak-video]
+profile-cond=p["video-params/sig-peak"] <= 1 and p["duration"] > 1 and p["user-data/novideo"]
+profile-restore=copy
+target-peak=auto
+[sdr-no-target-peak-image]
+profile-cond=p["video-params/sig-peak"] <= 1 and p["duration"] < 1 and p["user-data/noimage"]
+profile-restore=copy
+target-peak=auto
 [inverse-tone-mapping-video]
 # can cause lag
 profile-cond=p["video-params/sig-peak"] <= 1 and p["duration"] > 1 and not p["user-data/novideo"]
 profile-restore=copy
-scale=ewa_lanczos4sharpest
 target-prim=bt.2020
 target-trc=pq
 inverse-tone-mapping=yes
@@ -40,4 +58,3 @@ target-trc=pq
 scale=ewa_lanczos4sharpest
 inverse-tone-mapping=yes
 tone-mapping=spline
-#socat /tmp/wallpapermpvsocket - <<< '{command=["cycle-values","tone-mapping","bt.2446a","spline"]}'
