Fix gamma for png (srgb) images in inverse tone mapping; input.conf suggestions

--- a/mpv.conf
+++ b/mpv.conf
@@ -15,17 +15,14 @@ image-display-duration=300
 #|if you set target-peak manually you may want
 # tone-mapping=st-2094-40
 #| on real hdr content to prevent brightness flickering
-
-#| for inverse tone mapping, bt.2446a
-
-#| is better for a high target-peak!
-#| bt.2446a is generally less bright and more natural,
-#| otherwise use spline for a customizable, strong effect
-#| on lower target peaks below say 600
-#socat /tmp/wpmpvsocket - <<< '{command=["cycle-values","tone-mapping","bt.2446a","spline"]}'
-#socat /tmp/wpmpvsocket - <<< '{command=["set_property","target-peak","auto"]}'
-#socat /tmp/wpmpvsocket - <<< '{command=["script-binding","stats/display-stats-toggle"]}'
-
+#|Manually find your correct target-peak, or peak brightness,
+#|With Plasma 6.4 HDR Brightness Calibration!
+target-peak=480
+#|for inverse tone mapping, bt.2446a
+#|is better for a high target-peak!
+#|bt.2446a is generally less bright and more natural,
+#|otherwise use spline for a customizable, strong effect
+#|on lower target peaks below say 600
 vo=gpu-next
 gpu-api=vulkan
 gpu-context=waylandvk
@@ -33,7 +30,7 @@ hwdec=auto
 target-colorspace-hint=yes
 hdr-compute-peak=yes
 target-contrast=inf
-target-peak=480
+# tone-mapping-visualize
 [sdr-no-target-peak-video]
 profile-cond=p["video-params/sig-peak"] <= 1 and p["duration"] > 1 and p["user-data/novideo"]
 profile-restore=copy
@@ -58,3 +55,14 @@ target-trc=pq
 scale=ewa_lanczos4sharpest
 inverse-tone-mapping=yes
 tone-mapping=spline
+#|very important for png files!
+#|their gamma is interpreted wrong with srgb
+#|convert=yes means the original image or jpgs shouldnt be changed
+vf=format:primaries=bt.709:gamma=bt.1886:colorlevels=full:convert=yes
+#====================================================================
+#|Try these shortcuts for testing in your input.conf!
+#|you can try strings like "auto" or really any property
+#====================================================================
+#a cycle-values vf "" "format:primaries=bt.709:gamma=bt.1886:colorlevels=full:convert=yes"
+#c cycle-values target-peak 203 480
+#n cycle-values tone-mapping "bt.2446a" "spline"
