--- a/mpv.conf
+++ b/mpv.conf
@@ -9,9 +9,10 @@ drag-and-drop=no
 osc=no
 audio=no
 image-display-duration=300
+# term-status-msg="Duration hidden."
 
 #|target-peak may or may not be set correctly automatically
-#|you can see this under HDR10: Display: 0/x cd/m^2 in Stats for Nerds
+#|you can see this under HDR10: Display: 0/HERE cd/m^2 in Stats for Nerds
 #|if you set target-peak manually you may want
 # tone-mapping=st-2094-40
 #| on real hdr content to prevent brightness flickering
@@ -45,6 +46,7 @@ profile-cond=p["video-params/sig-peak"] <= 1 and p["duration"] > 1 and not p["us
 profile-restore=copy
 target-prim=bt.2020
 target-trc=pq
+scale=ewa_lanczos4sharpest
 inverse-tone-mapping=yes
 tone-mapping=spline
 [inverse-tone-mapping-image]
@@ -54,7 +56,7 @@ target-prim=bt.2020
 target-trc=pq
 scale=ewa_lanczos4sharpest
 inverse-tone-mapping=yes
-tone-mapping=spline
+tone-mapping=bt.2446a
 #|very important for png files!
 #|their gamma is interpreted wrong with srgb
 #|convert=yes means the original image or jpgs shouldnt be changed
