fix defaults and reformat readme

--- a/mpv.conf
+++ b/mpv.conf
@@ -10,6 +10,7 @@ osc=no
 audio=no
 image-display-duration=300
 # term-status-msg="Duration hidden."
+mute=yes
 
 #|target-peak may or may not be set correctly automatically
 #|you can see this under HDR10: Display: 0/HERE cd/m^2 in Stats for Nerds
@@ -56,7 +57,7 @@ target-prim=bt.2020
 target-trc=pq
 scale=ewa_lanczos4sharpest
 inverse-tone-mapping=yes
-tone-mapping=bt.2446a
+tone-mapping=spline
 #|very important for png files!
 #|their gamma is interpreted wrong with srgb
 #|convert=yes means the original image or jpgs shouldnt be changed
